--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^13.3.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "webpack": "^5.0.0"
   }
 }
