--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vite-plugin-html": "^3.2.2",
     "webpack": "^5.0.0"
   }
 }
