--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "await-to-js": "^3.0.0",
+    "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.3.12",
     "file-saver": "^2.0.5",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue3-colorpicker": "^2.2.2",
